# ffmpegplayground

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/alittlelost/ffmpegaudioloading/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/alittlelost/: WaveHeader.java
app/src/main/java/com/alittlelost/ffmpegaudioloading/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/alittlelost/ffmpegaudioloading/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
